# Project_Basic_OpenCV

./: CMakeLists.txt  README.md
src/: main.cpp
